feat(core): Added theme.mode for light and dark miyagi themes

--- a/packages/core/lib/config.json
+++ b/packages/core/lib/config.json
@@ -63,7 +63,9 @@
         "componentAssets": false
       },
       "renderComponentOverview": true,
-      "theme": {},
+      "theme": {
+        "mode": "light"
+      },
       "validations": {
         "html": true,
         "accessibility": true
