breaking(core): by default the component overview on the start page is not rendered anymore

--- a/packages/core/lib/config.json
+++ b/packages/core/lib/config.json
@@ -69,7 +69,7 @@
       "reloadAfterChanges": {
         "componentAssets": false
       },
-      "renderComponentOverview": true,
+      "renderComponentOverview": false,
       "theme": {
         "mode": "light"
       },
