feat(core): support dir attribute on html element for components (not miyagi itself)

--- a/packages/core/lib/config.json
+++ b/packages/core/lib/config.json
@@ -22,6 +22,7 @@
       "outputFile": false
     },
     "components": {
+      "textDirection": "ltr",
       "folder": "src",
       "ignores": [
         "node_modules",
