--- a/packages/core/lib/config.json
+++ b/packages/core/lib/config.json
@@ -78,7 +78,37 @@
         "componentAssets": false
       },
       "theme": {
-        "mode": "light"
+        "mode": "light",
+        "light": {
+          "navigation": {
+            "colorText": "var(--Miyagi-color-Text-internal)",
+            "colorBackground": "var(--Miyagi-color-Background-internal)",
+            "colorLinks": "var(--Miyagi-color-Link-internal)",
+            "colorLinksActive": "var(--Miyagi-color-Link-active-internal)",
+            "colorLinksActiveBackground": "var(--Miyagi-color-Link-active-background-internal)"
+          },
+          "content": {
+            "colorBackground": "var(--Miyagi-color-Background-internal)",
+            "colorText": "var(--Miyagi-color-Text-internal)",
+            "colorHeadline1": "var(--Miyagi-colorHeadline1-internal)",
+            "colorHeadline2": "var(--Miyagi-colorHeadline2-internal)"
+          }
+        },
+        "dark": {
+          "navigation": {
+            "colorText": "var(--Miyagi-color-Text-internal)",
+            "colorBackground": "var(--Miyagi-color-Background-internal)",
+            "colorLinks": "var(--Miyagi-color-Link-internal)",
+            "colorLinksActive": "var(--Miyagi-color-Link-active-internal)",
+            "colorLinksActiveBackground": "var(--Miyagi-color-Link-active-background-internal)"
+          },
+          "content": {
+            "colorBackground": "var(--Miyagi-color-Background-internal)",
+            "colorText": "var(--Miyagi-color-Text-internal)",
+            "colorHeadline1": "var(--Miyagi-colorHeadline1-internal)",
+            "colorHeadline2": "var(--Miyagi-colorHeadline2-internal)"
+          }
+        }
       },
       "validations": {
         "html": true,
