--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,7 @@
     "anymatch": "^3.1.2",
     "axe-core": "^4.3.5",
     "consolidate": "^0.16.0",
+    "cookie-parser": "^1.4.6",
     "css": "^3.0.0",
     "deepmerge": "^4.2.2",
     "directory-tree": "^3.0.1",
