--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,7 +48,7 @@
     "js-yaml": "^4.1.0",
     "json-schema-faker": "^0.5.0-rcv.40",
     "json-to-pretty-yaml": "^1.2.2",
-    "markdown-it": "^12.2.0",
+    "marked": "^4.0.6",
     "node-watch": "^0.7.2",
     "picocolors": "^1.0.0",
     "socket.io": "^4.4.0",
