--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,7 @@
     "miyagi": "./bin/miyagi.js"
   },
   "dependencies": {
+    "@stoplight/json-schema-sampler": "^0.2.2",
     "ajv": "^8.8.2",
     "anymatch": "^3.1.2",
     "axe-core": "^4.3.5",
@@ -46,7 +47,6 @@
     "handlebars": "^4.7.7",
     "handlebars-layouts": "^3.1.4",
     "js-yaml": "^4.1.0",
-    "json-schema-faker": "^0.5.0-rcv.40",
     "marked": "^4.0.6",
     "node-watch": "^0.7.2",
     "picocolors": "^1.0.0",
