--- a/packages/core/lib/config.json
+++ b/packages/core/lib/config.json
@@ -3,9 +3,6 @@
     "assets": {
       "root": "",
       "css": [],
-      "js": [],
-      "folder": [],
-      "manifest": null,
       "customProperties": {
         "files": [],
         "prefixes": {
@@ -13,7 +10,10 @@
           "color": "color",
           "spacing": "spacing"
         }
-      }
+      },
+      "folder": [],
+      "js": [],
+      "manifest": null
     },
     "build": {
       "basePath": "/",
@@ -21,8 +21,6 @@
       "outputFile": false
     },
     "components": {
-      "textDirection": "ltr",
-      "lang": "en",
       "folder": "src",
       "ignores": [
         "node_modules",
@@ -32,13 +30,17 @@
         ".miyagi.js",
         ".miyagi.json"
       ],
+      "lang": "en",
       "renderInIframe": {
         "default": false,
         "except": []
-      }
+      },
+      "textDirection": "ltr"
     },
     "engine": {
-      "name": null
+      "instance": null,
+      "name": null,
+      "options": {}
     },
     "files": {
       "css": {
@@ -76,9 +78,16 @@
       "reloadAfterChanges": {
         "componentAssets": false
       },
+      "textDirection": "ltr",
       "theme": {
+        "css": null,
+        "favicon": null,
+        "fontFamily": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
+        "js": null,
+        "logo": null,
         "mode": "light",
         "light": {
+          "logo": null,
           "navigation": {
             "colorText": "var(--Miyagi-color-Text-internal)",
             "colorBackground": "var(--Miyagi-color-Background-internal)",
@@ -97,6 +106,7 @@
           }
         },
         "dark": {
+          "logo": null,
           "navigation": {
             "colorText": "var(--Miyagi-color-Text-internal)",
             "colorBackground": "var(--Miyagi-color-Background-internal)",
@@ -116,10 +126,9 @@
         }
       },
       "validations": {
-        "html": true,
-        "accessibility": true
-      },
-      "textDirection": "ltr"
+        "accessibility": true,
+        "html": true
+      }
     },
     "schema": {}
   },
